# Kipit

Hackaton/Hackaton/: Cancelación.html  INE.html  Login.html  Navigation.html  TableExample.html  TarjetaDebito.html  styles.css  styles01.css  styles02.css  styles03.css  styles04.css  styles05.css
complemento/: Cargo.toml  build.rs
complemento/state/: Cargo.toml  lib.rs
ia/: Cargo.toml  build.rs
ia/src/: lib.rs
