[dependencies]
ink_lang = { version = "3.0", package = "ink" }
serde = "1"
sr25519 = "0.7"

[workspace]
members = ["smart_contract"]

[package]
name = "smart_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_lang = { version = "3.0", package = "ink" }
serde = "1"

//

[package]
name = "smart_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_lang = "3.0"
serde = "1"

//

[package]
name = "document_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_lang = "3.0"
serde = "1"