[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1"
serde_json = "1"
ink_lang = "3.0"
vara = "0.14"


[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false



[build-dependencies]
gear-wasm-builder.workspace = true
io.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# It's necessary to include all metawasm crates in the workspace section, otherwise they'll be
# ignored by Cargo and won't be built.
[workspace]
members = ["state"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47"  }
gclient = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
io.path = "io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
